Big refactoring (preparation for language server)